AC_INIT
X_AC_META
AC_PREREQ(2.59)
AC_CONFIG_AUX_DIR([config])

AM_INIT_AUTOMAKE([$META_NAME], $[META_VERSION], [no-define])

##
# Checks for programs.
##
AC_PROG_CC
AC_PROG_MAKE_SET
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL
AC_LIB_LTDL
AM_CONDITIONAL(WITH_GNU_LD, test "$with_gnu_ld" = "yes")

##
# Checks for header files.
##
AC_HEADER_STDC
AC_HEADER_TIME
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS( \
  fcntl.h \
  unistd.h \
  getopt.h \
  pthread.h \
  signal.h \
)
AC_DEBUG

#
# Check for default paths
#
# Must be called before module checks.  Module dir must be calculated
# before metric control path.
#
AC_CEREBRO_MODULE_DIR

#
# Check to build lmt module
#
AC_LMT
AM_CONDITIONAL(WITH_LMT, [test "$ac_with_lmt" = "yes"])

#
# Check to build lmt monitor module
#
AC_LMT_MON
AM_CONDITIONAL(WITH_LMT_MON, [test "$ac_with_lmt_mon" = "yes"])

##
# Checks for library functions.
##
AC_CHECK_FUNCS( \
  strcmp \
  strlen \
  strcpy \
  strchr \
  strsep \
  strspn \
  strtok_r \
  getopt_long \
  gethostbyname \
  gethostbyname_r
)

##
# Epilogue.
##
AC_CONFIG_FILES( \
  Makefile \
  libs/Makefile \
  libs/common/Makefile \
  libs/include/Makefile \
  modules/Makefile \
  modules/metric/Makefile \
  modules/monitor/Makefile \
)
AC_OUTPUT
